--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,3 +1,9 @@
 <div>
-    <h1>Hola, {{name}}! Que gusto verte!</h1>
+    <h1>Hola, {{name}} {{last_name}}! Que gusto verte!</h1>
+
+    <h2>Tu edad es: {{age}}</h2>
+
+    <h2>Tu direccion de E-mail es: {{email}}</h2>
+
+    <h2>Tu telefono es: {{phone}}</h2>
 </div>
